# neuralNetwork_c

./: CMakeLists.txt  main.cpp  nn_photemy.c  train.c
CUDA/: CMakeLists.txt  main.cu  nn.h  nn.hpp  saxpy.cu  stacktrace.h
CUDA/cuda_tests/: CMakeLists.txt  main.cu  test2.cu
kernels/: add.cl  neuralNetwork.cl
